# vocalmat_py

./: README.md  main.py  pyproject.toml
audio/: filter.py  loader.py  spectrogram.py
classification/: dataset.py  model.py  predict.py  train.py
features/: extractor.py
preprocessing/: normalize.py  threshold.py
scripts/: add_label_encoded.py
segmentation/: morphology.py  post_filter.py
tests/: test_data_annotation.py  test_loader.py  test_normalize.py  test_post_filter.py  test_segmentation.py  test_spectogram.py  test_threshold.py
utils/: generate_annotation.py  logger.py
