[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalmat-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
]

[tool.setuptools]
packages = ["audio", "features", "preprocessing", "segmentation", "utils"]
